# bff-template

./: .gitmodules  Dockerfile  README.md  clean.sh  init.sh  makefile  package-lock.json  package.json  pyproject.toml  test.sh
.github/workflows/: cicd.yaml
backend/: main.py
frontend/init/: index.html
frontend/public/: index.html
manager/: __init__.py  __main__.py  clean.py  config.py  deploy.py  docker_utils.py  gcp_utils.py  github_utils.py  init.py  manifest.py  service_account_manager.py
