[tool.poetry]
name = "bff-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
uvicorn = ">=0.35.0,<0.36.0"
fastapi = ">=0.116.1,<0.117.0"
python-dotenv = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"